# py-shr-parser

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: package.yml  release.yml  unittest.yml
Documentation/: .gitignore  appendix.rst  conf.py  examples.rst  index.rst  pyshrparser.rst  pyshrparser_api.rst
shr_parser/: __init__.py  exceptions.py  metadata.py  shr_parser.py
shr_parser/visualization/: __init__.py  spectrogram.py  spectrum.py
src/shr_parser/: version.py
tests/: test_shr_parser.py  test_shr_sweep.py  test_visualization.py
