[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-shr-parser"
version = "0.0.0"
authors = [
    { name = "Tom Schmitz", email="tschmitz@andrew.cmu.edu" },
]
description = "Python library for parsing Signal Hound SHR files"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy"
]
